--- a/app/src/main/res/layout/fragment_todayword.xml
+++ b/app/src/main/res/layout/fragment_todayword.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:id="@+id/today_word_listview"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#108810">
+    android:background="#881010">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="todayword"/>
+</LinearLayout>
