--- a/app/src/main/res/layout/activity_wwmain.xml
+++ b/app/src/main/res/layout/activity_wwmain.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent" >
-
-    <Button
         android:id="@+id/list_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="단어장 리스트"/>
+        android:orientation="horizontal"
+        android:weightSum="17">
+
+        <Button
+            android:id="@+id/today_wordlist_tab"
+            android:layout_weight="9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="일일 단어"
+            android:textSize="16dp"/>
+
+       <Button
+           android:id="@+id/my_wordlist_tab"
+           android:layout_weight="4"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:text="나만의 단어"
+           android:textSize="16dp"/>
+
+        <Button
+            android:id="@+id/quiz_tab"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="QUIZ"
+            android:textSize="16dp"/>
+
+    <LinearLayout
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    </LinearLayout>
 
 </LinearLayout>
 
