--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -8,8 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/menu"
-        android:contentDescription="@string/Stringimg"/>
+        android:src="@drawable/menu"/>
 
     <TextView
         android:id="@+id/quiz"
@@ -18,58 +17,52 @@
         android:text="@string/quiz"
         android:textSize="20sp"
         android:textColor="#000000"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:layout_marginTop="15dp"/>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/line3"
-        android:contentDescription="@string/Stringimg"/>
-
+        android:src="@drawable/line3"/>
 
     <TextView
-        android:id="@+id/QuestionIndex1"
+        android:id="@+id/QuestionIndex2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:gravity="center_horizontal"
+        android:textSize="13sp"
         android:textColor="#000000"
-        android:textSize="13sp" />
+        android:gravity="center_horizontal"/>
 
     <Button
-        android:id="@+id/q"
+        android:id="@+id/Question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:background="#00FFFFFF"
+        android:textSize="20sp"
         android:textColor="#000000"
         android:gravity="center_horizontal"
         android:layout_marginTop="130dp"/>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="130dp"
-        android:background="@drawable/radius"
-        android:textColor="#000000" />
-
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/radius"
-        android:textColor="#000000" />
+    <EditText
+        android:id="@+id/answer"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal"
+        android:inputType="none"
+        android:hint="여기에 답을 입력하세요."
+        android:textSize="13sp" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:id="@+id/nextbtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"
         android:background="@drawable/radius"
-        android:textColor="#000000" />
+        android:text="NEXT" />
+
 
 </LinearLayout>
