--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -35,7 +35,7 @@
     <LinearLayout
         android:id="@+id/feedback"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="350dp"
         android:layout_below="@+id/correct"
         android:layout_marginTop="30dp"
         android:background="#F6F6F6"
@@ -55,7 +55,7 @@
         <ListView
             android:id="@+id/review"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
+            android:layout_height="300dp"
 
             android:text="어댑터뷰?"
             android:textColor="#000000"
@@ -81,6 +81,7 @@
         android:layout_marginTop="30dp"
         android:layout_toRightOf="@id/correct"
         android:gravity="bottom"
+        android:paddingBottom="10dp"
         android:textSize="30sp" />
 
 
@@ -91,23 +92,23 @@
         android:layout_below="@id/feedback"
         android:layout_gravity="left"
         android:layout_marginTop="30dp"
-        android:background="#F6F6F6"
         android:gravity="center"
         android:text="틀린 문제 다시 풀기"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:background="@drawable/radius"/>
 
     <Button
         android:layout_width="170dp"
         android:layout_height="40dp"
         android:layout_below="@id/feedback"
-        android:layout_toRightOf="@id/retry"
         android:layout_gravity="right"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
-        android:background="#f6f6f6"
+        android:layout_marginTop="30dp"
+        android:layout_toRightOf="@id/retry"
         android:gravity="center"
         android:text="QUIZ 끝내기"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:background="@drawable/radius"/>
 
 </RelativeLayout>
 
