--- a/app/src/main/res/layout/activity_wwmain.xml
+++ b/app/src/main/res/layout/activity_wwmain.xml
@@ -9,12 +9,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="17">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/today_wordlist_tab"
-            android:layout_weight="9"
+            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="일일 단어"
@@ -22,7 +21,7 @@
 
        <Button
            android:id="@+id/my_wordlist_tab"
-           android:layout_weight="4"
+           android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="나만의 단어"
@@ -30,7 +29,7 @@
 
         <Button
             android:id="@+id/quiz_tab"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="QUIZ"
