--- a/app/src/main/res/layout/fragment_myword.xml
+++ b/app/src/main/res/layout/fragment_myword.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="#DDFFDD">
-
-    <Button
-        android:id="@+id/add_Btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="나만의 단어장에 추가"
-        android:textSize="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"/>
+    android:layout_width="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myword_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/add_Btn">
+        android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
 
-</RelativeLayout>
+</LinearLayout>
+
