--- a/app/src/main/res/layout/fragment_todayword.xml
+++ b/app/src/main/res/layout/fragment_todayword.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="#881010">
+    android:layout_width="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/add_Btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="todayword"/>
-</LinearLayout>
+        android:text="나만의 단어장에 추가"
+        android:textSize="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todayword_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/add_Btn">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+</RelativeLayout>
