--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/menu"
         android:contentDescription="@string/Stringimg"/>
 
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="15dp"
+        android:layout_height="20dp"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/left"/>
+
     <TextView
         android:id="@+id/quiz"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="@string/quiz"
-        android:textSize="20sp"
-        android:textColor="#000000"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="15dp"
+        android:layout_toRightOf="@id/exit"
         android:gravity="center"
-        android:layout_marginTop="15dp"/>
+        android:text="@string/quiz"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/line3"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="40dp"
         android:contentDescription="@string/Stringimg"/>
 
 
@@ -34,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:gravity="center_horizontal"
+        android:layout_below="@id/quiz"
+        android:layout_marginTop="15dp"
         android:textColor="#000000"
         android:textSize="13sp" />
 
@@ -41,16 +56,18 @@
         android:id="@+id/q"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_below="@id/QuestionIndex1"
+        android:layout_marginTop="100dp"
         android:background="#00FFFFFF"
-        android:textColor="#000000"
         android:gravity="center_horizontal"
-        android:layout_marginTop="130dp"/>
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="350dp"
         android:layout_height="50dp"
+        android:layout_below="@id/q"
         android:layout_marginTop="130dp"
         android:background="@drawable/radius"
         android:textColor="#000000" />
@@ -60,6 +77,7 @@
         android:id="@+id/button2"
         android:layout_width="350dp"
         android:layout_height="50dp"
+        android:layout_below="@id/button1"
         android:layout_marginTop="15dp"
         android:background="@drawable/radius"
         android:textColor="#000000" />
@@ -69,7 +87,8 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
+        android:layout_below="@id/button2"
         android:background="@drawable/radius"
         android:textColor="#000000" />
 
-</LinearLayout>
+</RelativeLayout>
