--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -1,68 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/menu"/>
 
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="15dp"
+        android:layout_height="20dp"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/left"/>
+
     <TextView
         android:id="@+id/quiz"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="15dp"
+        android:layout_toRightOf="@id/exit"
+        android:gravity="center"
         android:text="@string/quiz"
-        android:textSize="20sp"
         android:textColor="#000000"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="15dp"/>
+        android:textSize="20sp" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/line3"/>
+        android:layout_below="@id/menu"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/line3" />
 
     <TextView
         android:id="@+id/QuestionIndex2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:textSize="13sp"
+        android:layout_below="@id/quiz"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
         android:textColor="#000000"
-        android:gravity="center_horizontal"/>
+        android:textSize="13sp" />
 
     <Button
         android:id="@+id/Question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/QuestionIndex2"
+        android:layout_marginTop="100dp"
         android:background="#00FFFFFF"
-        android:textSize="20sp"
-        android:textColor="#000000"
         android:gravity="center_horizontal"
-        android:layout_marginTop="130dp"/>
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/answer"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:layout_below="@id/Question"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
-        android:layout_gravity="center_horizontal"
-        android:inputType="none"
+        android:gravity="center_horizontal"
         android:hint="여기에 답을 입력하세요."
+        android:inputType="none"
         android:textSize="13sp" />
 
     <Button
         android:id="@+id/nextbtn"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="15dp"
+        android:layout_height="20dp"
+        android:layout_alignBottom="@id/answer"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/radius"
-        android:text="NEXT" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="8dp"
+        android:layout_toRightOf="@id/answer"
+        android:background="@drawable/right" />
 
-
-</LinearLayout>
+</RelativeLayout>
