--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -14,16 +14,25 @@
         android:layout_height="wrap_content"
         android:src="@drawable/menu" />
 
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="15dp"
+        android:layout_height="20dp"
+        android:layout_below="@id/menu"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/left"/>
+
     <TextView
         android:id="@+id/quiz"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/menu"
         android:layout_marginTop="15dp"
-        android:gravity="center_horizontal"
+        android:layout_toRightOf="@id/exit"
+        android:gravity="center"
         android:text="결과"
         android:textColor="#000000"
-        android:textSize="20sp" />
+        android:textSize="20sp"  />
 
     <ImageView
         android:layout_width="match_parent"
@@ -37,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_below="@+id/correct"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="#F6F6F6"
         android:orientation="vertical">
 
@@ -91,24 +100,25 @@
         android:layout_height="40dp"
         android:layout_below="@id/feedback"
         android:layout_gravity="left"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/radius"
         android:gravity="center"
         android:text="틀린 문제 다시 풀기"
-        android:textColor="#000000"
-        android:background="@drawable/radius"/>
+        android:textColor="#000000" />
 
     <Button
+        android:id="@+id/finish"
         android:layout_width="170dp"
         android:layout_height="40dp"
         android:layout_below="@id/feedback"
         android:layout_gravity="right"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/retry"
+        android:background="@drawable/radius"
         android:gravity="center"
         android:text="QUIZ 끝내기"
-        android:textColor="#000000"
-        android:background="@drawable/radius"/>
+        android:textColor="#000000" />
 
 </RelativeLayout>
 
