--- a/app/src/main/res/layout/fragment_todayword.xml
+++ b/app/src/main/res/layout/fragment_todayword.xml
@@ -15,7 +15,7 @@
     <ExpandableListView
         android:id="@+id/expandable_wordlist"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/add_Btn"/>
 
 </RelativeLayout>
