--- a/app/src/main/res/layout/item_parent.xml
+++ b/app/src/main/res/layout/item_parent.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:descendantFocusability="blocksDescendants">
 
     <TextView
         android:id="@+id/list_name"
@@ -14,12 +15,21 @@
     <!--임시 사이즈-->
 
     <CheckBox
-        android:id="@+id/bookmark"
+        android:id="@+id/button2"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:button="@null"
         android:layout_alignParentRight="true"
         android:background="@drawable/custom_bookmark"
+        android:focusable="false"/>
+
+    <ImageButton
+        android:id="@+id/button1"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_toLeftOf="@+id/button2"
+        android:paddingRight="10dp"
+        android:background="@drawable/right"
         android:focusable="false"/>
 
 </RelativeLayout>
