add list dialog

--- a/app/src/main/res/layout/fragment_myword.xml
+++ b/app/src/main/res/layout/fragment_myword.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myword_recycler"
+    <Button
+        android:id="@+id/add_Btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="단어장 추가"
+        android:textSize="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
+
+    <ExpandableListView
+        android:id="@+id/expandable_wordlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/add_Btn"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-
-</LinearLayout>
-
+</RelativeLayout>
