--- a/app/src/main/res/layout/fragment_todayword.xml
+++ b/app/src/main/res/layout/fragment_todayword.xml
@@ -16,6 +16,7 @@
         android:id="@+id/expandable_wordlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/add_Btn"/>
+        android:layout_below="@+id/add_Btn"
+        android:choiceMode="multipleChoice"/>
 
 </RelativeLayout>
