--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:hint="여기에 답을 입력하세요."
-        android:inputType="none"
+        android:inputType="text"
         android:textSize="13sp" />
 
     <Button
