--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -35,20 +35,20 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/line3"
         android:layout_below="@id/menu"
         android:layout_marginTop="40dp"
-        android:contentDescription="@string/Stringimg"/>
+        android:contentDescription="@string/Stringimg"
+        android:src="@drawable/line3" />
 
 
     <TextView
         android:id="@+id/QuestionIndex1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:gravity="center_horizontal"
         android:layout_below="@id/quiz"
+        android:layout_marginVertical="10dp"
         android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
         android:textColor="#000000"
         android:textSize="13sp" />
 
