--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Word Wallet"
-        android:textSize="32dp"
+        android:textSize="27dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_gravity="center"
@@ -28,19 +28,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:weightSum="3"
         android:orientation="vertical">
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1.5" />
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
@@ -56,8 +54,10 @@
                 android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="이메일을 입력하세요"
+                android:textSize="15sp"
                 android:inputType="textEmailAddress"
                 android:layout_gravity="center"
+                android:gravity="center_horizontal"
                 android:background="@null"/>
             <View
                 android:layout_width="match_parent"
@@ -69,38 +69,46 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:ems="10"
+                android:textSize="15sp"
                 android:hint="비밀번호를 입력하세요"
                 android:inputType="textPassword"
+                android:gravity="center_horizontal"
                 android:layout_gravity="center"
                 android:background="@null"/>
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5" />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:weightSum="10"
-        android:orientation="horizontal">
+        android:layout_weight="5"
+        android:orientation="vertical">
+
+
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="0dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="로그인"
-            android:layout_weight="5"
             android:layout_margin="8dp"
             android:layout_gravity="center"
             android:background="@drawable/border"/>
 
         <Button
             android:id="@+id/btn_register"
-            android:layout_width="0dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
             android:text="회원가입"
             android:layout_margin="8dp"
             android:layout_gravity="center"
             android:background="@drawable/border"/>
+
 
     </LinearLayout>
 </LinearLayout>
