--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -9,8 +9,8 @@
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/menu"
-        android:contentDescription="@string/Stringimg"/>
+        android:contentDescription="@string/Stringimg"
+        android:src="@drawable/menu" />
 
     <Button
         android:id="@+id/exit"
@@ -35,10 +35,10 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/line3"
         android:layout_below="@id/menu"
         android:layout_marginTop="40dp"
-        android:contentDescription="@string/Stringimg"/>
+        android:contentDescription="@string/Stringimg"
+        android:src="@drawable/line3" />
 
 
     <TextView
