--- a/app/src/main/res/layout/activity_short_cut.xml
+++ b/app/src/main/res/layout/activity_short_cut.xml
@@ -2,18 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="30dp">
+
+    <ImageView
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/Stringimg"
+        android:src="@drawable/menu" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp">
 
         <ImageButton
             android:id="@+id/previousbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/left"/>
+            android:src="@drawable/left"             />
 
         <TextView
             android:id="@+id/list_name"
@@ -23,7 +33,8 @@
             android:text="단어장 이름"
             android:textColor="#000"
             android:gravity="center"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textSize="15sp"/>
 
         <ImageButton
             android:id="@+id/nextbtn"
