--- a/app/src/main/res/layout/fragment_todayword.xml
+++ b/app/src/main/res/layout/fragment_todayword.xml
@@ -4,13 +4,9 @@
     android:layout_width="match_parent">
 
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todayword_recycler"
+    <ExpandableListView
+        android:id="@+id/expandable_wordlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
