--- a/app/src/main/res/layout/activity_one_word.xml
+++ b/app/src/main/res/layout/activity_one_word.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical">
-
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/list_name"
@@ -13,43 +11,21 @@
         android:text="단어장 이름"
         android:textColor="#000"
         android:gravity="center"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"/>
 
+    <ImageView
+        android:id="@+id/line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/list_name"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/line2" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="match_parent">
+    </androidx.viewpager2.widget.ViewPager2>
 
-        <ImageButton
-            android:id="@+id/previousbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/left"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <ImageButton
-            android:id="@+id/nextbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/right"/>
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="단어"/>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="뜻"/>
-
-
-
-</LinearLayout>
+</RelativeLayout>
