short update listview adapter

--- a/app/src/main/res/layout/activity_short.xml
+++ b/app/src/main/res/layout/activity_short.xml
@@ -61,5 +61,13 @@
         android:src="@drawable/line3"
         />
 
+    <ListView
+        android:id="@+id/shortWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/slide2"
+        android:divider="@null"
+        />
+
 
 </RelativeLayout>
