--- a/app/src/main/res/layout/item_parent_today.xml
+++ b/app/src/main/res/layout/item_parent_today.xml
@@ -39,7 +39,7 @@
         android:layout_height="25dp"
         android:layout_toLeftOf="@+id/bookmark"
         android:layout_marginRight="5dp"
-        android:background="@drawable/right"
+        android:background="@drawable/shortcut"
         android:focusable="false"/>
 
 </RelativeLayout>
