--- a/app/src/main/res/layout/activity_one_word.xml
+++ b/app/src/main/res/layout/activity_one_word.xml
@@ -10,6 +10,7 @@
         android:layout_weight="1"
         android:text="단어장 이름"
         android:textColor="#000"
+        android:textSize="20sp"
         android:gravity="center"
         android:textAlignment="center"
         android:layout_alignParentTop="true"/>
@@ -26,22 +27,25 @@
         android:id="@+id/previousbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/left" />
+        android:src="@drawable/left"
+        android:background="#00FFFFFF"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-    </androidx.viewpager2.widget.ViewPager2>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></androidx.viewpager2.widget.ViewPager2>
 
     <ImageButton
         android:id="@+id/nextbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/right" />
+        android:src="@drawable/right"
+        android:background="#00FFFFFF"/>
 
 </RelativeLayout>
