--- a/app/src/main/res/layout/fragment_one_word.xml
+++ b/app/src/main/res/layout/fragment_one_word.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:id="@+id/wordimage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/ww_logo"
+        android:alpha="0.5"
         android:layout_marginBottom="20dp"
         android:layout_centerInParent="true"/>
 
@@ -19,7 +20,10 @@
         android:layout_below="@+id/wordimage"
         android:layout_centerHorizontal="true"
         android:text="단어"
-        android:textAlignment="center" />
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:padding="5dp" />
 
     <TextView
         android:id="@+id/meaning"
@@ -28,6 +32,9 @@
         android:layout_below="@+id/word"
         android:layout_centerHorizontal="true"
         android:text="뜻"
-        android:textAlignment="center" />
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:padding="5dp" />
 
 </RelativeLayout>
