--- a/app/src/main/res/layout/activity_one_word.xml
+++ b/app/src/main/res/layout/activity_one_word.xml
@@ -36,7 +36,9 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.viewpager2.widget.ViewPager2>
+        android:layout_height="match_parent">
+
+    </androidx.viewpager2.widget.ViewPager2>
 
     <ImageButton
         android:id="@+id/nextbtn"
