bookmark and deletion(mockup)

--- a/app/src/main/res/layout/fragment_myword.xml
+++ b/app/src/main/res/layout/fragment_myword.xml
@@ -9,8 +9,19 @@
         android:layout_height="wrap_content"
         android:text="단어장 추가"
         android:textSize="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_toLeftOf="@+id/del_Btn"
+        android:layout_alignParentTop="true"/>
+
+    <Button
+        android:id="@+id/del_Btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="단어장 삭제"
+        android:textSize="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
+
 
     <ExpandableListView
         android:id="@+id/expandable_wordlist"
