--- a/app/src/main/res/layout/activity_one_word.xml
+++ b/app/src/main/res/layout/activity_one_word.xml
@@ -9,10 +9,19 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="단어장 이름"
+        android:layout_marginTop="10dp"
         android:textColor="#000"
         android:textSize="20sp"
         android:gravity="center"
         android:textAlignment="center"
+        android:layout_alignParentTop="true"/>
+
+    <Button
+        android:id="@+id/delete_word_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="단어 삭제"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
 
     <ImageView
