--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -7,17 +7,10 @@
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/menu"/>
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/user"/>
 
-    <Button
-        android:id="@+id/exit"
-        android:layout_width="15dp"
-        android:layout_height="20dp"
-        android:layout_below="@id/menu"
-        android:layout_marginTop="17dp"
-        android:background="@drawable/left"/>
 
     <TextView
         android:id="@+id/quiz"
@@ -25,7 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/menu"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@id/exit"
         android:gravity="center"
         android:text="@string/quiz"
         android:textColor="#000000"
