--- a/app/src/main/res/layout/activity_read_myword_db.xml
+++ b/app/src/main/res/layout/activity_read_myword_db.xml
@@ -7,10 +7,10 @@
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/menu" />
+        android:src="@drawable/user" />
 
     <TextView
         android:id="@+id/wordlist"
