--- a/app/src/main/res/layout/activity_word_list_select.xml
+++ b/app/src/main/res/layout/activity_word_list_select.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/menu" />
+        android:src="@drawable/user"
+        />
 
     <RelativeLayout
         android:id="@+id/background"
@@ -43,8 +44,9 @@
             android:layout_width="350dp"
             android:layout_height="500dp"
             android:layout_below="@id/selectList"
+            android:choiceMode="multipleChoice"
             android:paddingTop="10dp"
-            android:choiceMode="multipleChoice"/>
+            android:divider="#00FFFFFF"/>
 
 
     </RelativeLayout>
