--- a/app/src/main/res/layout/activity_wwmain.xml
+++ b/app/src/main/res/layout/activity_wwmain.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/menu"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/user"
         android:contentDescription="@string/Stringimg"/>
 
     <LinearLayout
