--- a/app/src/main/res/layout/fragment_myword.xml
+++ b/app/src/main/res/layout/fragment_myword.xml
@@ -5,17 +5,22 @@
 
     <Button
         android:id="@+id/add_Btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="단어장 추가"
-        android:textSize="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"/>
+        android:background="@drawable/radius"
+
+        android:text="단어장 추가"
+        android:textSize="13sp" />
 
     <ExpandableListView
         android:id="@+id/expandable_wordlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/add_Btn"/>
+        android:layout_below="@+id/add_Btn"
+        android:layout_marginTop="30dp"
+        android:divider="#00FFFFFF"
+        android:dividerHeight="20dp"/>
 
 </RelativeLayout>
