--- a/app/src/main/res/layout/item_child.xml
+++ b/app/src/main/res/layout/item_child.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:background="#F0F0F0"
+
     android:padding="12dp"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:layout_marginBottom="30dp">
 
     <TextView
         android:id="@+id/word"
@@ -13,7 +14,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:textColor="#FF000000"
-        android:text="단어"/>
+        android:text="단어"
+        android:gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/meaning"
@@ -21,6 +23,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:textColor="#FF000000"
-        android:text="뜻"/>
+        android:text="뜻"
+        android:gravity="center_vertical"/>
 
 </LinearLayout>
