--- a/app/src/main/res/layout/item_parent_today.xml
+++ b/app/src/main/res/layout/item_parent_today.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:padding="20dp"
-    android:descendantFocusability="blocksDescendants">
+     android:layout_height="wrap_content"
+     android:layout_width="match_parent"
+     android:padding="20dp"
+     android:descendantFocusability="blocksDescendants"
+     android:background="@drawable/radius">
 
     <TextView
-        android:id="@+id/list_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:layout_alignParentLeft="true"
-        android:textColor="#FF000000"/>
-    <!--임시 사이즈-->
+         android:id="@+id/list_name"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:gravity="left"
+         android:layout_alignParentLeft="true"
+         android:textColor="#FF000000"/>
+        <!--임시 사이즈-->
 
     <ImageButton
         android:id="@+id/arrow_btn"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/arrow"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="1dp"
         android:layout_marginRight="5dp"
-        android:focusable="false"/>
+        android:background="@drawable/arrow"
+        android:focusable="false" />
 
     <CheckBox
-        android:id="@+id/bookmark"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:button="@null"
-        android:layout_toLeftOf="@+id/arrow_btn"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/custom_bookmark"
-        android:focusable="false"/>
+         android:id="@+id/bookmark"
+         android:layout_width="20dp"
+         android:layout_height="20dp"
+         android:layout_marginLeft="5dp"
+         android:layout_marginTop="1dp"
+         android:layout_marginRight="10dp"
+         android:layout_toLeftOf="@+id/arrow_btn"
+         android:background="@drawable/custom_bookmark"
+         android:button="@null"
+         android:focusable="false" />
 
     <ImageButton
         android:id="@+id/shortcut_btn"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/bookmark"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/right"
-        android:focusable="false"/>
+        android:background="@drawable/shortcut"
+        android:focusable="false" />
+
 
 </RelativeLayout>
+
