--- a/app/src/main/res/layout/activity_addword.xml
+++ b/app/src/main/res/layout/activity_addword.xml
@@ -59,11 +59,13 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_below="@+id/image_edit"
-        android:alpha="70"
-        android:src="@drawable/ww_logo"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:alpha="100"
+         />
 
 
 </RelativeLayout>
