--- a/app/src/main/res/layout/activity_one_word.xml
+++ b/app/src/main/res/layout/activity_one_word.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="30dp">
 
     <TextView
+
         android:id="@+id/list_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="단어장 이름"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
-        android:textColor="#000"
-        android:textSize="20sp"
+        android:layout_weight="1"
         android:gravity="center"
+        android:text="단어장 이름"
         android:textAlignment="center"
-        android:layout_alignParentTop="true"/>
+        android:textColor="#000"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/delete_word_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="단어 삭제"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:background="#00FFFFFF"/>
 
-    <ImageView
-        android:id="@+id/line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/list_name"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/line2" />
+
 
     <ImageButton
         android:id="@+id/previousbtn"
@@ -44,6 +42,7 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
