--- a/app/src/main/res/layout/fragment_one_word.xml
+++ b/app/src/main/res/layout/fragment_one_word.xml
@@ -18,23 +18,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/wordimage"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
+        android:padding="5dp"
         android:text="단어"
-        android:textColor="#000000"
-        android:textSize="20dp"
         android:textAlignment="center"
-        android:padding="5dp" />
+        android:textColor="#000000"
+        android:textSize="20dp" />
 
     <TextView
+        android:layout_marginTop="20dp"
         android:id="@+id/meaning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/word"
         android:layout_centerHorizontal="true"
+        android:padding="5dp"
         android:text="뜻"
-        android:textColor="#000000"
-        android:textSize="20dp"
         android:textAlignment="center"
-        android:padding="5dp" />
+        android:textColor="#000000"
+        android:textSize="20dp" />
 
 </RelativeLayout>
