--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,7 +10,8 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/user" />
+        android:src="@drawable/user"
+        android:alpha="0"/>
 
     <TextView
         android:id="@+id/quiz"
