--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -12,7 +12,8 @@
         android:id="@+id/menu"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:src="@drawable/user" />
+        android:src="@drawable/user"
+        android:alpha="0"/>
 
 
     <TextView
