add icon and save btn

--- a/app/src/main/res/layout/activity_word_list_select.xml
+++ b/app/src/main/res/layout/activity_word_list_select.xml
@@ -29,6 +29,7 @@
             android:layout_alignBaseline="@id/selectList"
             android:layout_marginLeft="80dp"
             android:layout_toRightOf="@id/selectList"
+            android:textColor="#FF000000"
             android:background="#00FFFFFF"
             android:text="저장" />
 
