--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -9,8 +9,7 @@
         android:id="@+id/menu"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:src="@drawable/user"
-        android:alpha="0"/>
+        android:src="@drawable/home" />
 
 
     <TextView
