--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -10,9 +10,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/user"
-        android:alpha="0"/>
-
+        android:src="@drawable/home" />
 
 
     <TextView
